Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -7626,7 +7626,7 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        _LOGGER.debug(&quot;Set preset mode to %s.&quot;, preset_mode)</span>
+            <span class="d2h-code-line-ctn">        _LOGGER.debug(&quot;Set preset mode to %s&quot;, preset_mode)</span>
         </div>
     </td>
 </tr><tr>
@@ -22073,7 +22073,7 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line d2h-ins d2h-change">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>14</ins>.<ins>5</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>14</ins>.<ins>6a2</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -22095,7 +22095,7 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line d2h-ins d2h-change">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0.9.3</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0.9.4a8</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -31830,7 +31830,7 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        _LOGGER.debug(&quot;Turn switch.%s on.&quot;, self._name)</span>
+            <span class="d2h-code-line-ctn">        _LOGGER.debug(&quot;Turn switch.%s on&quot;, self._name)</span>
         </div>
     </td>
 </tr><tr>
@@ -31968,7 +31968,7 @@ OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        _LOGGER.debug(&quot;Turn switch.%s off.&quot;, self._name)</span>
+            <span class="d2h-code-line-ctn">        _LOGGER.debug(&quot;Turn switch.%s off&quot;, self._name)</span>
         </div>
     </td>
 </tr><tr>
