Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -19201,7 +19201,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">) -&gt; bool:  # noqa: C901</span>
+            <span class="d2h-code-line-ctn">) -&gt; bool:</span>
         </div>
     </td>
 </tr><tr>
@@ -22040,7 +22040,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line d2h-ins d2h-change">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>14</ins>.<ins>6a2</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>14</ins>.<ins>6</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -22062,7 +22062,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line d2h-ins d2h-change">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0.9.4a9</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: [&quot;<ins>plugwise==0.9.4</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
