Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -84,7 +84,7 @@
       </svg>      <a href="#d2h-155800" class="d2h-file-name">/home/runner/work/progress/progress/clones/{ha-core/homeassistant/components → beta/custom_components}/plugwise/config_flow.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+208</span>
-          <span class="d2h-lines-deleted">-33</span>
+          <span class="d2h-lines-deleted">-31</span>
       </span>
     </span>
 </li>
@@ -10363,7 +10363,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line d2h-info">@@ -86,36 +168,106 @@</div>
+        <div class="d2h-code-line d2h-info">@@ -86,34 +168,106 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -11550,29 +11550,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line d2h-del">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            for entry in self._async_current_entries():</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">117</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del">
-        <div class="d2h-code-line d2h-del">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                if entry.data.get(CONF_HOST) == user_input[CONF_HOST]:</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">118</div>
-<div class="line-num2"></div>
-    </td>
-    <td class="d2h-del">
-        <div class="d2h-code-line d2h-del">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                    return self.async_abort(reason=&quot;already_configured&quot;)</span>
+            <span class="d2h-code-line-ctn">            self._async_abort_entries_match({CONF_HOST: user_input[CONF_HOST]})</span>
         </div>
     </td>
 </tr><tr>
@@ -11599,7 +11577,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">119</div>
+      <div class="line-num1">117</div>
 <div class="line-num2">271</div>
     </td>
     <td class="d2h-cntx">
@@ -11610,7 +11588,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">120</div>
+      <div class="line-num1">118</div>
 <div class="line-num2">272</div>
     </td>
     <td class="d2h-cntx">
@@ -11621,7 +11599,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">121</div>
+      <div class="line-num1">119</div>
 <div class="line-num2">273</div>
     </td>
     <td class="d2h-cntx">
@@ -11634,11 +11612,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line d2h-info">@@ -127,26 +279,37 @@</div>
+        <div class="d2h-code-line d2h-info">@@ -125,26 +279,37 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">127</div>
+      <div class="line-num1">125</div>
 <div class="line-num2">279</div>
     </td>
     <td class="d2h-cntx">
@@ -11649,7 +11627,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">128</div>
+      <div class="line-num1">126</div>
 <div class="line-num2">280</div>
     </td>
     <td class="d2h-cntx">
@@ -11660,7 +11638,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">129</div>
+      <div class="line-num1">127</div>
 <div class="line-num2">281</div>
     </td>
     <td class="d2h-cntx">
@@ -11682,7 +11660,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">130</div>
+      <div class="line-num1">128</div>
 <div class="line-num2">283</div>
     </td>
     <td class="d2h-cntx">
@@ -11693,7 +11671,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">131</div>
+      <div class="line-num1">129</div>
 <div class="line-num2">284</div>
     </td>
     <td class="d2h-cntx">
@@ -11704,7 +11682,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">132</div>
+      <div class="line-num1">130</div>
 <div class="line-num2">285</div>
     </td>
     <td class="d2h-cntx">
@@ -11715,7 +11693,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">133</div>
+      <div class="line-num1">131</div>
 <div class="line-num2">286</div>
     </td>
     <td class="d2h-cntx">
@@ -11726,7 +11704,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">134</div>
+      <div class="line-num1">132</div>
 <div class="line-num2">287</div>
     </td>
     <td class="d2h-cntx">
@@ -11737,7 +11715,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">135</div>
+      <div class="line-num1">133</div>
 <div class="line-num2">288</div>
     </td>
     <td class="d2h-cntx">
@@ -11759,7 +11737,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">136</div>
+      <div class="line-num1">134</div>
 <div class="line-num2">290</div>
     </td>
     <td class="d2h-cntx">
@@ -11770,7 +11748,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">137</div>
+      <div class="line-num1">135</div>
 <div class="line-num2">291</div>
     </td>
     <td class="d2h-cntx">
@@ -11781,7 +11759,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">138</div>
+      <div class="line-num1">136</div>
 <div class="line-num2">292</div>
     </td>
     <td class="d2h-cntx">
@@ -11792,7 +11770,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">139</div>
+      <div class="line-num1">137</div>
 <div class="line-num2">293</div>
     </td>
     <td class="d2h-cntx">
@@ -11803,7 +11781,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">140</div>
+      <div class="line-num1">138</div>
 <div class="line-num2">294</div>
     </td>
     <td class="d2h-cntx">
@@ -11814,7 +11792,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">141</div>
+      <div class="line-num1">139</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -11836,7 +11814,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">142</div>
+      <div class="line-num1">140</div>
 <div class="line-num2">296</div>
     </td>
     <td class="d2h-cntx">
@@ -11847,7 +11825,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">143</div>
+      <div class="line-num1">141</div>
 <div class="line-num2">297</div>
     </td>
     <td class="d2h-cntx">
@@ -11858,7 +11836,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">144</div>
+      <div class="line-num1">142</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -11869,7 +11847,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del">
-      <div class="line-num1">145</div>
+      <div class="line-num1">143</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del">
@@ -11880,7 +11858,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">146</div>
+      <div class="line-num1">144</div>
 <div class="line-num2">298</div>
     </td>
     <td class="d2h-cntx">
@@ -11891,7 +11869,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">147</div>
+      <div class="line-num1">145</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -11902,7 +11880,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">148</div>
+      <div class="line-num1">146</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -11913,7 +11891,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">149</div>
+      <div class="line-num1">147</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -12078,7 +12056,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">150</div>
+      <div class="line-num1">148</div>
 <div class="line-num2">313</div>
     </td>
     <td class="d2h-cntx">
@@ -12089,7 +12067,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">151</div>
+      <div class="line-num1">149</div>
 <div class="line-num2">314</div>
     </td>
     <td class="d2h-cntx">
@@ -12100,7 +12078,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">152</div>
+      <div class="line-num1">150</div>
 <div class="line-num2">315</div>
     </td>
     <td class="d2h-cntx">
@@ -12113,11 +12091,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line d2h-info">@@ -162,13 +325,25 @@</div>
+        <div class="d2h-code-line d2h-info">@@ -160,13 +325,25 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">162</div>
+      <div class="line-num1">160</div>
 <div class="line-num2">325</div>
     </td>
     <td class="d2h-cntx">
@@ -12128,7 +12106,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">163</div>
+      <div class="line-num1">161</div>
 <div class="line-num2">326</div>
     </td>
     <td class="d2h-cntx">
@@ -12139,7 +12117,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">164</div>
+      <div class="line-num1">162</div>
 <div class="line-num2">327</div>
     </td>
     <td class="d2h-cntx">
@@ -12238,7 +12216,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">165</div>
+      <div class="line-num1">163</div>
 <div class="line-num2">336</div>
     </td>
     <td class="d2h-cntx">
@@ -12249,7 +12227,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">166</div>
+      <div class="line-num1">164</div>
 <div class="line-num2">337</div>
     </td>
     <td class="d2h-cntx">
@@ -12293,7 +12271,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">167</div>
+      <div class="line-num1">165</div>
 <div class="line-num2">341</div>
     </td>
     <td class="d2h-cntx">
@@ -12304,7 +12282,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">168</div>
+      <div class="line-num1">166</div>
 <div class="line-num2">342</div>
     </td>
     <td class="d2h-cntx">
@@ -12315,7 +12293,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">169</div>
+      <div class="line-num1">167</div>
 <div class="line-num2">343</div>
     </td>
     <td class="d2h-cntx">
@@ -12326,7 +12304,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">170</div>
+      <div class="line-num1">168</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -12348,7 +12326,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">171</div>
+      <div class="line-num1">169</div>
 <div class="line-num2">345</div>
     </td>
     <td class="d2h-cntx">
@@ -12370,7 +12348,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">172</div>
+      <div class="line-num1">170</div>
 <div class="line-num2">347</div>
     </td>
     <td class="d2h-cntx">
@@ -12381,7 +12359,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">173</div>
+      <div class="line-num1">171</div>
 <div class="line-num2">348</div>
     </td>
     <td class="d2h-cntx">
@@ -12392,7 +12370,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">174</div>
+      <div class="line-num1">172</div>
 <div class="line-num2">349</div>
     </td>
     <td class="d2h-cntx">
@@ -29619,7 +29597,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line d2h-del">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    &quot;flow_title&quot;: &quot;Smile: {name}&quot;</span>
+            <span class="d2h-code-line-ctn">    &quot;flow_title&quot;: &quot;{name}&quot;</span>
         </div>
     </td>
 </tr><tr>
