Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -13546,7 +13546,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">MASTER_THERMOSTATS = [&quot;thermostat&quot;, &quot;zone_thermostat&quot;]</span>
+            <span class="d2h-code-line-ctn">MASTER_THERMOSTATS = [&quot;thermostat&quot;, &quot;zone_thermostat&quot;, &quot;thermostatic_radiator_valve&quot;]</span>
         </div>
     </td>
 </tr><tr>
