Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -6462,7 +6462,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if self.<ins>_api.single_master_thermostat</ins>:</span>
+            <span class="d2h-code-line-ctn">        if self.<ins>_api.single_master_thermostat()</ins>:</span>
         </div>
     </td>
 </tr><tr>
@@ -17672,7 +17672,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    if <ins>api.</ins>single_master_thermostat is None:</span>
+            <span class="d2h-code-line-ctn">    if <ins>api.</ins>single_master_thermostat<ins>()</ins> is None:</span>
         </div>
     </td>
 </tr><tr>
@@ -27308,7 +27308,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>        if &quot;members&quot; in api.devices[dev_id]:</ins></span>
+            <span class="d2h-code-line-ctn"><ins>        if &quot;members&quot; in api.gw_devices[dev_id]:</ins></span>
         </div>
     </td>
 </tr><tr>
