Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -83,7 +83,7 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-155800" class="d2h-file-name">/home/runner/work/progress/progress/clones/{ha-core/homeassistant/components → beta/custom_components}/plugwise/config_flow.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+144</span>
+          <span class="d2h-lines-added">+145</span>
           <span class="d2h-lines-deleted">-8</span>
       </span>
     </span>
@@ -10044,7 +10044,7 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -115,6 +177,8 @@</div>
+        <div class="d2h-code-line">@@ -115,8 +177,11 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
@@ -10124,25 +10124,58 @@
         </div>
     </td>
 </tr><tr>
+    <td class="d2h-code-linenumber d2h-ins">
+      <div class="line-num1"></div>
+<div class="line-num2">184</div>
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        # pylint: disable=no-member # https:&#x2F;&#x2F;github.com&#x2F;PyCQA&#x2F;pylint&#x2F;issues&#x2F;3167</span>
+        </div>
+    </td>
+</tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
       <div class="line-num1">120</div>
-<div class="line-num2">184</div>
+<div class="line-num2">185</div>
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">        # pylint: disable=no-member # https:&#x2F;&#x2F;github.com&#x2F;PyCQA&#x2F;pylint&#x2F;issues&#x2F;3167</span>
+            <span class="d2h-code-line-ctn">        self.context[&quot;title_placeholders&quot;] = {</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">121</div>
+<div class="line-num2">186</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">            CONF_HOST: self.discovery_info[CONF_HOST],</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-linenumber d2h-cntx">
+      <div class="line-num1">122</div>
+<div class="line-num2">187</div>
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">            CONF_NAME: _name,</span>
         </div>
     </td>
 </tr>
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -126,7 +190,67 @@</div>
+        <div class="d2h-code-line">@@ -125,7 +190,67 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">126</div>
+      <div class="line-num1">125</div>
 <div class="line-num2">190</div>
     </td>
     <td class="d2h-cntx">
@@ -10153,7 +10186,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">127</div>
+      <div class="line-num1">126</div>
 <div class="line-num2">191</div>
     </td>
     <td class="d2h-cntx">
@@ -10164,7 +10197,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">128</div>
+      <div class="line-num1">127</div>
 <div class="line-num2">192</div>
     </td>
     <td class="d2h-cntx">
@@ -10175,7 +10208,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">129</div>
+      <div class="line-num1">128</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -10857,7 +10890,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">130</div>
+      <div class="line-num1">129</div>
 <div class="line-num2">254</div>
     </td>
     <td class="d2h-cntx">
@@ -10868,7 +10901,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">131</div>
+      <div class="line-num1">130</div>
 <div class="line-num2">255</div>
     </td>
     <td class="d2h-cntx">
@@ -10879,7 +10912,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">132</div>
+      <div class="line-num1">131</div>
 <div class="line-num2">256</div>
     </td>
     <td class="d2h-cntx">
@@ -10892,11 +10925,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -174,7 +298,8 @@</div>
+        <div class="d2h-code-line">@@ -173,7 +298,8 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">174</div>
+      <div class="line-num1">173</div>
 <div class="line-num2">298</div>
     </td>
     <td class="d2h-cntx">
@@ -10907,7 +10940,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">175</div>
+      <div class="line-num1">174</div>
 <div class="line-num2">299</div>
     </td>
     <td class="d2h-cntx">
@@ -10918,7 +10951,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">176</div>
+      <div class="line-num1">175</div>
 <div class="line-num2">300</div>
     </td>
     <td class="d2h-cntx">
@@ -10929,7 +10962,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-del d2h-change">
-      <div class="line-num1">177</div>
+      <div class="line-num1">176</div>
 <div class="line-num2"></div>
     </td>
     <td class="d2h-del d2h-change">
@@ -10962,7 +10995,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">178</div>
+      <div class="line-num1">177</div>
 <div class="line-num2">303</div>
     </td>
     <td class="d2h-cntx">
@@ -10973,7 +11006,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">179</div>
+      <div class="line-num1">178</div>
 <div class="line-num2">304</div>
     </td>
     <td class="d2h-cntx">
@@ -10984,7 +11017,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">180</div>
+      <div class="line-num1">179</div>
 <div class="line-num2">305</div>
     </td>
     <td class="d2h-cntx">
@@ -10997,11 +11030,11 @@
 <tr>
     <td class="d2h-code-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-line">@@ -196,8 +321,19 @@</div>
+        <div class="d2h-code-line">@@ -195,8 +321,19 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">196</div>
+      <div class="line-num1">195</div>
 <div class="line-num2">321</div>
     </td>
     <td class="d2h-cntx">
@@ -11012,7 +11045,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">197</div>
+      <div class="line-num1">196</div>
 <div class="line-num2">322</div>
     </td>
     <td class="d2h-cntx">
@@ -11023,7 +11056,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">198</div>
+      <div class="line-num1">197</div>
 <div class="line-num2">323</div>
     </td>
     <td class="d2h-cntx">
@@ -11122,7 +11155,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">199</div>
+      <div class="line-num1">198</div>
 <div class="line-num2">332</div>
     </td>
     <td class="d2h-cntx">
@@ -11133,7 +11166,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">200</div>
+      <div class="line-num1">199</div>
 <div class="line-num2">333</div>
     </td>
     <td class="d2h-cntx">
@@ -11177,7 +11210,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">201</div>
+      <div class="line-num1">200</div>
 <div class="line-num2">337</div>
     </td>
     <td class="d2h-cntx">
@@ -11188,7 +11221,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">202</div>
+      <div class="line-num1">201</div>
 <div class="line-num2">338</div>
     </td>
     <td class="d2h-cntx">
@@ -11199,7 +11232,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">203</div>
+      <div class="line-num1">202</div>
 <div class="line-num2">339</div>
     </td>
     <td class="d2h-cntx">
