Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -14619,7 +14619,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    <del>device_registry</del> <del>=</del> <del>await</del> <del>dr</del>.<del>async_get_registry(hass</del>)</span>
+            <span class="d2h-code-line-ctn">    <del>device_registry</del> <del>=</del> <del>dr</del>.<del>async_get(hass</del>)</span>
         </div>
     </td>
 </tr><tr>
@@ -14740,7 +14740,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    <ins>_LOGGER.debug(&quot;Gateway</ins> <ins>is</ins> <ins>%s&quot;,</ins> <ins>coordinator</ins>.<ins>data[0][&quot;gateway_id&quot;]</ins>)</span>
+            <span class="d2h-code-line-ctn">    <ins>_LOGGER.debug(&quot;Gateway</ins> <ins>is</ins> <ins>%s&quot;, coordinator</ins>.<ins>data[0][&quot;gateway_id&quot;]</ins>)</span>
         </div>
     </td>
 </tr><tr>
