--- a/diff.html
+++ b/diff.html
@@ -17866,7 +17866,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>20</ins>.<ins>0b0</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>version</ins>&quot;: &quot;<ins>0</ins>.<ins>20</ins>.<ins>0</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
