Update: main - Diff report completed

--- a/diff.html
+++ b/diff.html
@@ -16442,7 +16442,7 @@
     <td class="d2h-del">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">async def _update_listener(hass: HomeAssistant, entry: ConfigEntry):</span>
+            <span class="d2h-code-line-ctn">async def _update_listener(hass: HomeAssistant, entry: ConfigEntry) -&gt; None:</span>
         </div>
     </td>
 </tr><tr>
