Update:  - Diff report completed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_core_dev_to_beta.html'>Unified diff core:dev vs beta:core_dev_to_beta</a></li>
+
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
                 <ul>
